--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "@trunkrs/react-native-image-compressor": "^0.1.3",
     "axios": "^0.21.1",
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
@@ -22,15 +23,17 @@
     "react-native-button-spinner": "^0.1.4",
     "react-native-calendars": "^1.1249.0",
     "react-native-cardview": "^2.0.5",
+    "react-native-circular-progress": "^1.3.7",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.9.0",
-    "react-native-image-picker": "^3.3.2",
+    "react-native-image-picker": "^3.5.0",
     "react-native-image-resizer": "^1.4.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-photo-upload": "^1.3.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-signature-capture": "^0.4.11",
+    "react-native-svg": "^10.1.0",
     "react-navigation": "^4.4.3",
     "react-redux": "^7.2.2",
     "react-signature-canvas": "^1.0.3",
@@ -41,6 +44,7 @@
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/halogen": "^0.2.6",
     "babel-jest": "^26.6.3",
     "eslint": "^7.19.0",
     "jest": "^26.6.3",
