--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iNettyForTeams",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -19,6 +19,7 @@
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-native": "0.63.4",
     "react-native-button-spinner": "^0.1.4",
     "react-native-calendars": "^1.1249.0",
